--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header"></header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Седона. Туризм в Аризоне</h1>
+      <section class="promo"></section>
+      <section class="advantages"></section>
+      <section class="feature"></section>
+      <section class="hotels"></section>
+    </main>
+    <footer class="page-footer">
+      <section class="newsletter"></section>
+      <section class="socials"></section>
+    </footer>
   </body>
 </html>
