--- a/index.html
+++ b/index.html
@@ -5,7 +5,43 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header"></header>
+
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="naviagation-logo" href="index.html">
+          <img class="page-header-logo" src="#" alt="Логотип Седоны.">
+        </a>
+
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Хочу Сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <main class="main-index">
       <h1 class="visually-hidden">Седона. Туризм в Аризоне</h1>
       <section class="promo"></section>
@@ -13,6 +49,7 @@
       <section class="feature"></section>
       <section class="hotels"></section>
     </main>
+
     <footer class="page-footer">
       <section class="newsletter"></section>
       <section class="socials"></section>
