--- a/index.html
+++ b/index.html
@@ -44,10 +44,71 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Седона. Туризм в Аризоне</h1>
-      <section class="promo"></section>
-      <section class="advantages"></section>
-      <section class="feature"></section>
-      <section class="hotels"></section>
+
+      <section class="promo">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <p class="promo-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <img class="promo-image-background" src="" alt="Скалы в Седоне.">
+        <img class="promo-image-welcome" src="" alt="Добро пожаловать в Седону.">
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Причины выбрать Седону для отдыха</h2>
+        <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+        <ul class="advantages-list">
+          <li class="advantages-item advantages-item-featured">
+            <h3 class="advantages-item-title">Настоящий городок</h3>
+            <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Небольшая площадь</h3>
+            <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Красивая дорога</h3>
+            <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Мало туристов</h3>
+            <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item advantages-item-featured">
+            <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+            <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+        </ul>
+
+        <img class="advantages-image advantages-image-right" src="" alt="Город Седона.">
+        <img class="advantages-image advantages-image-left" src="" alt="Скалы и каньон в Седоне.">
+      </section>
+
+      <section class="features">
+        <h2 class="features-title">Опытный персонал и качественное обслуживание!</h2>
+        <b class="features-description">Приезжайте в Седону отдохнуть в комфорте и уюте!</b>
+
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-item-title">Жильё</h3>
+            <p class="features-item-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-item-title">Еда</h3>
+            <p class="features-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-item-title">Сувениры</h3>
+            <p class="features-item-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="hotels">
+        <h2 class="visually-hidden">Гостиницы в Седоне</h2>
+        <b class="hotels-title">Заинтересовались?</b>
+        <p class="hotels-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-big" href="catalog.html">Поиск гостиницы в Седоне</a>
+      </section>
     </main>
 
     <footer class="page-footer">
