--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="outline.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
@@ -49,7 +50,7 @@
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <p class="promo-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <img class="promo-image-background" src="" alt="Скалы в Седоне.">
-        <img class="promo-image-welcome" src="" alt="Добро пожаловать в Седону.">
+        <img class="promo-image-welcome" src="" alt="Текст Добро пожаловать в Седону.">
       </section>
 
       <section class="advantages">
@@ -112,8 +113,46 @@
     </main>
 
     <footer class="page-footer">
-      <section class="newsletter"></section>
-      <section class="socials"></section>
+
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="newsletter-email">Email</label>
+          <input class="newsletter-email-input" type="email" id="newsletter-email" name="newsletter-email" placeholder="Ваш e-mail">
+          <button class="button newsletter-button" type="submit">Подписаться</button>
+        </form>
+
+      </section>
+
+      <section class="socials">
+
+        <ul class="footer-socials-list">
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+
+        <a class="footer-socials-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+
+        <a class="footer-socials-htmlacademy" href="https://htmlacademy.ru/">
+          <img class="footer-socials-htmlacademy-logo" src="" alt="HTML Academy">
+        </a>
+
+      </section>
     </footer>
   </body>
 </html>
