--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="outline.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
@@ -127,6 +126,7 @@
       </section>
 
       <section class="socials">
+        <h2 class="visually-hidden">Контакты</h2>
 
         <ul class="footer-socials-list">
           <li class="footer-socials-item">
@@ -154,5 +154,6 @@
 
       </section>
     </footer>
+
   </body>
 </html>
